[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfit"
version = "0.2.1"
description = "Quantize an LLM if it fits your GPU — a GPU-aware 4-bit AWQ/GPTQ quantization CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sahil Kadadekar" }]
keywords = ["llm", "quantization", "awq", "gptq", "vllm", "gpu", "4-bit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.4",
  "transformers>=4.49",
  "huggingface_hub>=0.25",
  "datasets>=3.0",
  "accelerate>=1.0",
  "llmcompressor>=0.5",
  "gptqmodel>=2.0",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gguf = ["gguf>=0.10"]  # for the GGUF backend's convert step

[project.urls]
Homepage = "https://github.com/Sahil170595/quantfit"

[project.scripts]
quantfit = "quantfit.cli:main"

[tool.setuptools.packages.find]
include = ["quantfit*"]

[tool.pytest.ini_options]
# Make `pytest tests/` import the package without an editable install (keeps CI light).
pythonpath = ["."]
