[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfit"
version = "0.3.0"
description = "Quantize an LLM and check it still refuses what it should — a GPU-aware quantization CLI that measures the safety drift of the quantization it just performed."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Sahil Kadadekar" }]
keywords = ["llm", "quantization", "awq", "gptq", "gguf", "fp8", "gpu", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.4",
  # >=4.56: the from_pretrained dtype= kwarg (torch_dtype was deprecated there).
  "transformers>=4.56",
  "huggingface_hub>=0.25",
  "datasets>=3.0",
  "accelerate>=1.0",
  # Upper-bounded: llm-compressor's modifier/oneshot API churns across minors; the
  # cap moves only after a validated run on the new minor (ROADMAP standing rule).
  "llmcompressor>=0.5,<0.13",
  "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]
gguf = ["gguf>=0.10"]  # for the GGUF backend's convert step

[project.urls]
Homepage = "https://github.com/Sahil170595/quantfit"
Repository = "https://github.com/Sahil170595/quantfit"

[project.scripts]
quantfit = "quantfit.cli:main"

[tool.setuptools.packages.find]
include = ["quantfit*"]

[tool.pytest.ini_options]
# Make `pytest tests/` import the package without an editable install (keeps CI light).
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120
